@@ -20,6 +20,7 @@
  %O  = total megabytes in rejected files
  %n  = name of current file
  %p  = percent of files uploaded (uploaded files / totalfiles * 100)
+ %N  = total mbits uploaded
 
  %a  = average speed per transfer (kb/sec)
  %A  = average speed (kb/sec)
@@ -30,6 +31,7 @@
 #
  %U  = Name
  %S  = Speed (kb/sec)
+ %s  = Speed (Mbps)
  %G  = Primary group
 #
 #### Appended messages
